# pdm

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  pdm-20-bootloader.yaml  pdm-20.yaml
.zed/: settings.json
analog/src/: lib.rs
firmware/pdm-20/: CHANGELOG.md  board.toml  memory.x
firmware/pdm-20-bootloader/src/: main.rs
firmware/pdm-20/src/: main.rs  receive.rs  startup.rs
firmware/pdm-36/: Cargo.toml  memory.x
firmware/pdm-36-bootloader/: CHANGELOG.md
firmware/pdm-36/src/: config.rs  updater.rs
j1939/: Cargo.toml
j1939/src/: diagnostics.rs  id.rs  lib.rs  message.rs  signal.rs  slot.rs  transfer.rs
lib/analog/: Cargo.toml
lib/analog/src/: lib.rs
lib/blocking-executor/: Cargo.toml
lib/blocking-executor/src/: lib.rs
lib/cortex-m-link/: Cargo.toml  build.rs  custom.x
lib/cortex-m-link/src/: lib.rs
lib/header/: Cargo.toml
lib/header/src/: lib.rs
lib/messages/: Cargo.toml  build.rs  pdm20.dbc
lib/messages/src/: lib.rs
lib/messages/src/pdm20/: config.rs  messages.rs  mod.rs
lib/messages/src/pdm36/: messages.rs  mod.rs
lib/pdm/: Cargo.toml
lib/pdm/examples/: analog_input.rs  blink_output.rs
lib/pdm/src/: pdm20.rs
lib/vpd/: Cargo.toml
lib/vpd/src/: item.rs  lib.rs
messages/: Cargo.toml  build.rs  pdm-36.dbc  pdm20.dbc  pdm36.dbc
messages/src/: lib.rs  messages.rs
messages/src/pdm20/: messages.rs  mod.rs
messages/src/pdm36/: messages.rs  mod.rs
pdm/: Cargo.toml
pdm-20/: Cargo.toml  build.rs
pdm-20-bootloader/: Cargo.toml
pdm-20-bootloader/.cargo/: config.toml
pdm-20/.cargo/: config.toml
pdm-20/src/: analog.rs  blocking.rs  config.rs  current.rs  driver.rs  main.rs  receive.rs  startup.rs  status.rs
pdm-36/: CHANGELOG.md  Cargo.toml  README.md  memory.x
pdm-36-bootloader/: Cargo.toml  README.md  memory.x
pdm-36-bootloader/.cargo/: config.toml
pdm-36-bootloader/src/: main.rs
pdm-36/.cargo/: config.toml
pdm-36/src/: analog.rs  config.rs  current.rs  main.rs  output.rs  pgn.rs  receive.rs  startup.rs  status.rs  updater.rs  watchdog.rs
pdm-tool/: Cargo.toml
pdm-tool/src/: main.rs
pdm-tool/src/cmd/: analog.rs  find.rs  mod.rs  output.rs  update.rs
pdm-tool/src/pdm20/: mod.rs  output.rs
pdm-tool/src/pdm36/: analog.rs  output.rs
pdm/examples/: analog_input.rs  blink_output.rs  update_firmware.rs
pdm/src/: lib.rs  pdm20.rs  pdm36.rs
st-driver/: Cargo.toml
st-driver/src/: driver.rs  lib.rs  vn9e30f.rs
tool/: Cargo.toml  README.md
tool/src/: main.rs
tool/src/pdm20/: current.rs  mod.rs  reset.rs  update.rs
tool/src/pdm36/: current.rs  mod.rs  update.rs
vpd/: Cargo.toml  README.md
vpd/src/: items.rs  lib.rs  otp.rs
xtask/: .gitignore  Cargo.toml  STM32G4.yaml  pdm20.pub  pub.key
xtask/src/: config.rs  generate_public_key.rs  generate_secret_key.rs  main.rs  patch_header.rs  program_vpd.rs  run.rs  sign.rs
xtask/src/pdm20/: mod.rs  program_vpd.rs
xtask/src/pdm36/: mod.rs  program_vpd.rs
