[workspace]
resolver = "2"
members = [
    "bin/*",
    "lib/*",
    "xtask",
]

[workspace.dependencies]
header = { path = "lib/header", features = ["defmt"] }
messages = { path = "lib/messages" }
cortex-m-link = { path = "lib/cortex-m-link" }
vpd = { path = "lib/vpd", features = ["defmt-1"] }
analog = { path = "lib/analog" }
pdm = { path = "lib/pdm" }
saelient = { git = "https://github.com/umi-eng/saelient.git", default-features = false }

bitflags = "2.10.0"
defmt = "1.0.1"
zerocopy = { version = "0.8.33", features = ["derive"] }
crc = "3.4.0"
