[package]
name = "pdm-36-bootloader"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32g474ce",
    "single-bank",
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
