[package]
name = "pdm-36"
version = "0.1.0"
edition = "2024"

[dependencies]
messages.workspace = true
j1939.workspace = true
st-driver.workspace = true

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { version = "2.1.2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.3", features = [
    "cortex-m-systick",
    "defmt",
    "systick-64bit",
] }
rtic-sync = { version = "1.3.2", features = ["defmt-03"] }
embedded-can = "0.4.1"
embassy-stm32 = { features = [
    "stm32g474ce",
    "single-bank",
    "defmt",
    "unstable-pac",
], git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
