[package]
name = "pdm-36"
version = "0.1.1"
edition = "2024"

[dependencies]
messages = { workspace = true, features = ["defmt-1"] }
saelient = { workspace = true, features = ["defmt-1"] }
analog.workspace = true
vpd.workspace = true

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
rtic = { version = "2.1.2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0.3", features = [
    "cortex-m-systick",
    "defmt",
    "systick-64bit",
] }
rtic-sync = { version = "1.3.2", features = ["defmt-03"] }
embedded-can = "0.4.1"
embassy-stm32 = { features = [
    "stm32g474ce",
    "single-bank",
    "defmt",
    "unstable-pac",
], git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "ed25519-salty",
] }
sequential-storage = { version = "4.0.3", features = ["defmt-03"] }
paste = "1.0.15"
st-driver = { git = "https://github.com/umi-eng/st-driver.git", version = "0.1.0", rev = "b532c2a", features = [
    "defmt-1",
] }

[features]
disable-watchdog = []
