[package]
name = "st-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
device-driver = "1.0.4"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
rtic-sync = "1.3.2"

[features]
defmt = [
    "device-driver/defmt-03",
    "rtic-sync/defmt-03",
    "embedded-hal-bus/defmt-03",
    "embedded-hal-async/defmt-03",
    "embedded-hal/defmt-03",
    "dep:defmt",
]
