[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
vpd.workspace = true
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
probe-rs = "0.29.0"
serde = "1.0.219"
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", rev = "e644a21", version = "0.3.0" }
toml = "0.9.2"
zerocopy = "0.8.26"
base64 = "0.22.1"
