[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
vpd = { workspace = true, features = ["std"] }
header.workspace = true
zerocopy.workspace = true
facet = { workspace = true, features = ["std"] }
facet-toml.workspace = true
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "env"] }
probe-rs = "0.29.0"
tlvc-text = { git = "https://github.com/oxidecomputer/tlvc", rev = "e644a21", version = "0.3.0" }
base64 = "0.22.1"
salty = "0.3.0"
object = "0.38.1"
xshell = "0.2.7"
cargo_toml = "0.22.3"
