[package]
name = "messages"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec.workspace = true
defmt = { workspace = true, optional = true }
embedded-can.workspace = true
saelient.workspace = true

[build-dependencies]
dbc-codegen.workspace = true

[features]
default = ["pdm20", "pdm36"]

pdm20 = []
pdm36 = []

defmt-1 = ["dep:defmt"]
