[package]
name = "messages"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec.workspace = true
defmt = { workspace = true, optional = true }
embedded-can.workspace = true
postcard = { version = "1.1.3", default-features = false }
saelient.workspace = true
sequential-storage = { version = "7", features = ["postcard"], optional = true }
serde = { version = "1.0", default-features = false }

[build-dependencies]
dbc-codegen.workspace = true

[features]
default = ["pdm20", "pdm36"]

pdm20 = []
pdm36 = []

defmt = ["dep:defmt"]
device = ["dep:sequential-storage"]
