[package]
name = "pdm"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-can.workspace = true
saelient = { workspace = true, features = ["std"] }
log.workspace = true
messages.workspace = true
socketcan.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["pdm20", "pdm36"]

pdm20 = []
pdm36 = []
