[package]
name = "vpd"
description = "Vital product data"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { workspace = true, optional = true }
serde.workspace = true
zerocopy.workspace = true
tlvc.workspace = true

[dev-dependencies]
tlvc-text.workspace = true

[features]
defmt-1 = ["dep:defmt"]
