[package]
name = "vpd"
description = "Vital product data"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { workspace = true, optional = true }
facet = { workspace = true, optional = true }
tlvc-text = { workspace = true, optional = true }
zerocopy.workspace = true
tlvc.workspace = true

[dev-dependencies]
tlvc-text.workspace = true

[features]
defmt = ["dep:defmt"]
std = ["dep:facet", "dep:tlvc-text"]
